--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -24,7 +24,9 @@
     "x = np.cos(u) * np.sin(v)\n",
     "y = np.sin(u) * np.sin(v)\n",
     "z = np.cos(v)\n",
-    "ax.plot_surface(x, y, z, color=\"r\", rstride=1, cstride=1, linewidth=0, antialiased=False)"
+    "ax.plot_surface(\n",
+    "    x, y, z, color=\"r\", rstride=1, cstride=1, linewidth=0, antialiased=False\n",
+    ")"
    ]
   },
   {
@@ -153,13 +155,13 @@
     "    def __init__(self, default):\n",
     "        self.__default = default\n",
     "        self.__implementations = defaultdict(lambda: default)\n",
-    "        \n",
+    "\n",
     "    def __repr__(self):\n",
     "        return \"<Drawer(%s)>\" % self.__name__\n",
     "\n",
     "    def set_impl(self, dim, impl):\n",
     "        self.__implementations[dim] = impl\n",
-    "        \n",
+    "\n",
     "    def get_impl(self, dim):\n",
     "        return self.__implementations[dim]\n",
     "\n",
@@ -197,6 +199,7 @@
     "    Some docs\n",
     "    \"\"\"\n",
     "    pass\n",
+    "\n",
     "\n",
     "@poly.dim(3)\n",
     "def poly2d(ax):\n",
