--- a/Monopole diffraction full.ipynb
+++ b/Monopole diffraction full.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "88aa2678",
+   "id": "d383e5fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1a917259",
+   "execution_count": 2,
+   "id": "fb637653",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,8 +75,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "id": "1a86e1d6",
+   "execution_count": 3,
+   "id": "9006e1fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,106 +177,13 @@
     "        \n",
     "        E += Ed[0] * beta_0_dir + Ed[1] * phi_dir\n",
     "        \n",
-    "    return E\n",
-    "\n",
-    "\n",
-    "\"\"\"\n",
-    "def Ebis(theta, r=1e6, f=1e9):\n",
-    "\n",
-    "    l = c / f\n",
-    "    k = 2 * pi / l\n",
-    "    a = 3 * l\n",
-    "\n",
-    "    los = 1 * (theta <= pi / 2)\n",
-    "\n",
-    "    ejkr_r = exp(-1j * k * r) / r\n",
-    "\n",
-    "    u = unit(array([cos(theta), 0, -sin(theta)]))\n",
-    "    v = array([0, 1, 0])\n",
-    "    E = los * sin(theta) * ejkr_r * u\n",
-    "\n",
-    "    n = 2  # because alpha = 0\n",
-    "    beta_0 = pi / 2\n",
-    "\n",
-    "    for x in [+a, -a]:\n",
-    "\n",
-    "        O = array([0, 0, 0], dtype=float)  # TX point\n",
-    "        Q = array([x, 0, 0], dtype=float)  # Where diffraction occurs\n",
-    "        P = array([r * sin(theta), 0, r * cos(theta)], dtype=float)  # RX point\n",
-    "\n",
-    "        alpha = np.arctan2(x, 0)\n",
-    "        E_at_D = sin(alpha) * (exp(-1j * k * a) / a) * array([0, 0, 1])\n",
-    "\n",
-    "        print(\"E_at_D\", 20 * log10(length(E_at_D)))\n",
-    "\n",
-    "        e = sign(alpha) * array([0, 1, 0], dtype=float)  # Edge direction\n",
-    "        n0 = array([0, 0, 1], dtype=float)  # Normal direction\n",
-    "\n",
-    "        s_dir = unit(P - Q)\n",
-    "        s = length(P - Q)\n",
-    "        s_p_dir = unit(Q - O)\n",
-    "\n",
-    "        sinb01 = np.linalg.norm(cross(s_p_dir, e))\n",
-    "        sinb02 = np.linalg.norm(cross(s_dir, e))\n",
-    "        assert (\n",
-    "            abs(sinb01 - sinb02) < 1e-6\n",
-    "        ), f\"KELLER Cone is not satisfied with {sinb01} and {sinb02}\"\n",
-    "\n",
-    "        phi_p_dir = unit(-cross(e, s_p_dir))\n",
-    "        beta_0_p_dir = unit(+cross(phi_p_dir, s_p_dir))\n",
-    "        beta_0_p_dir = array([0, 1, 0], dtype=float)\n",
-    "\n",
-    "        phi_dir = unit(cross(e, s_dir))\n",
-    "        beta_0_dir = unit(cross(phi_dir, s_dir))\n",
-    "\n",
-    "        s_t_dir = unit(s_dir - dot(s_dir, e) * e)\n",
-    "        s_t_p_dir = unit(s_p_dir - dot(s_p_dir, e) * e)\n",
-    "\n",
-    "        t = cross(n0, e)\n",
-    "        print(\n",
-    "            \"t\",\n",
-    "            t,\n",
-    "            \"s_p_dir\",\n",
-    "            s_p_dir,\n",
-    "            \"phi_p_dir\",\n",
-    "            phi_p_dir,\n",
-    "            \"beta_0_p_dir\",\n",
-    "            beta_0_p_dir,\n",
-    "        )\n",
-    "\n",
-    "        phi_p = pi - (pi - arccos(dot(-s_t_p_dir, t))) * sign(dot(-s_t_p_dir, n0))\n",
-    "        phi = pi - (pi - arccos(dot(s_t_dir, t))) * sign(dot(s_t_dir, n0))\n",
-    "\n",
-    "        # Diffraction\n",
-    "        Li = Lro = Lrn = a\n",
-    "        D_s, D_h = D_s_h(n, k, beta_0, phi, phi_p, Li, Lrn, Lro)\n",
-    "\n",
-    "        Ei = array([dot(E_at_D, beta_0_p_dir), dot(E_at_D, phi_p_dir)])\n",
-    "\n",
-    "        print(\"Ei\", 20 * log10(length(Ei)))\n",
-    "        print(D_s, D_h)\n",
-    "\n",
-    "        D = 0.5 * array([[-D_s, 0], [0, -D_h]], dtype=complex64)\n",
-    "\n",
-    "        rho = complex(x / sin(theta))\n",
-    "        factor = np.sqrt(rho / (s * (s + rho))) * np.exp(-1j * k * s)\n",
-    "        # print(factor\n",
-    "        # factor = (np.sqrt(rho) / r) * np.exp(-1j * k * s)\n",
-    "        Ed = factor * (D @ Ei)\n",
-    "        # print(\"Ed\", Ed)\n",
-    "        print(\"Ed\", 20 * log10(length(Ed)))\n",
-    "        # E += Ed\n",
-    "        # rotate(Ed, beta_0_dir, phi_dir, u ,v )#\n",
-    "        E += Ed[0] * beta_0_dir + Ed[1] * phi_dir\n",
-    "\n",
-    "    return E\n",
-    "\"\"\";"
+    "    return E"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
-   "id": "7007090e",
+   "execution_count": 4,
+   "id": "780ca75d",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d3acd6b",
+   "id": "a35bc184",
    "metadata": {},
    "outputs": [],
    "source": []
